trying to fix book list container widths and spacing

--- a/client/src/components/BookList.css
+++ b/client/src/components/BookList.css
@@ -2,7 +2,6 @@
   width: calc((450px * 2) + 2em);
   height: 100vh;
   margin: 5px;
-  padding: 5px;
 }
 
 .book-list h2 {
